--- a/force-app/main/default/classes/OpportunityTriggerHandler.cls
+++ b/force-app/main/default/classes/OpportunityTriggerHandler.cls
@@ -1,30 +1,43 @@
 /**
  * @description Classe de logique pour le trigger sur Opportunity.
- * Contient les méthodes pour gérer les différentes logiques métier.
  */
 public with sharing class OpportunityTriggerHandler {
 
     /**
-     * @description Gère les actions à effectuer après la mise à jour d'une Opportunité.
+     * @description NOUVELLE MÉTHODE - Valide que la date de fin est postérieure à la date de début.
+     * @param newOpportunities La liste des opportunités en cours de traitement.
+     */
+    public static void handleDateValidation(List<Opportunity> newOpportunities) {
+        for (Opportunity opp : newOpportunities) {
+            // On vérifie que les deux dates sont renseignées
+            if (opp.Start_Date__c != null && opp.End_Date__c != null) {
+                // Si la date de fin n'est pas strictement après la date de début...
+                if (opp.End_Date__c <= opp.Start_Date__c) {
+                    // ... on ajoute une erreur. Cela empêchera la sauvegarde.
+                    opp.End_Date__c.addError('La date de fin doit être postérieure à la date de début.');
+                }
+            }
+        }
+    }
+
+    /**
+     * @description Gère la création de Voyages après qu'une Opportunité est gagnée.
      * @param newOpportunities La liste des nouvelles versions des opportunités.
      * @param oldOpportunityMap La map des anciennes versions des opportunités.
      */
-    public static void handleAfterUpdate(List<Opportunity> newOpportunities, Map<Id, Opportunity> oldOpportunityMap) {
+    public static void handleTripCreation(List<Opportunity> newOpportunities, Map<Id, Opportunity> oldOpportunityMap) {
         
         List<Trip__c> tripsToCreate = new List<Trip__c>();
 
-        // 1. On parcourt les opportunités qui ont été mises à jour
         for (Opportunity opp : newOpportunities) {
-            
-            // On récupère l'ancienne version de l'opportunité pour comparer les champs
             Opportunity oldOpp = oldOpportunityMap.get(opp.Id);
 
-            // 2. On vérifie si l'opportunité vient de passer en "Closed Won"
+            // On vérifie si l'opportunité vient de passer en "Closed Won"
             if (opp.StageName == 'Closed Won' && oldOpp.StageName != 'Closed Won') {
                 
                 Trip__c newTrip = new Trip__c();
                 
-                // 3. Mappage complet des champs de l'opportunité vers le voyage
+                // Mappage complet des champs
                 newTrip.Account__c = opp.AccountId;
                 newTrip.Opportunity__c = opp.Id;
                 newTrip.Status__c = 'A venir';
@@ -38,13 +51,11 @@ public with sharing class OpportunityTriggerHandler {
             }
         }
 
-        // 4. On insère la liste des nouveaux voyages en base de données
         if (!tripsToCreate.isEmpty()) {
             try {
                 insert tripsToCreate;
             } catch (DmlException e) {
-                // On logue l'erreur pour le débogage
-                System.debug('Erreur lors de la création des voyages depuis le trigger Opportunity : ' + e.getMessage());
+                System.debug('Erreur lors de la création des voyages : ' + e.getMessage());
             }
         }
     }
